# CloverViewer

./: .gitignore  .mcp.json  CLAUDE.md  Cargo.toml  LICENSE  OPTIMIZATION_SUGGESTIONS.md  README.en.md  README.ja.md  README.md  build.rs  refactor_plan.md
.claude/: settings.local.json
.github/workflows/: ci.yml
ai/: CLAUDE.md  INDEX.md  architecture.md  coding-standards.md  egui-patterns.md  skills.md
prompt/: project.md
src/: app.rs  config.rs  constants.rs  i18n.rs  image_loader.rs  main.rs  navigator.rs  screenshot.rs  utils.rs
src/core/: business.rs  config_manager.rs  hotkey_parser.rs  hotkeys.rs  image_loader.rs  launch.rs  logging.rs  mod.rs  navigator.rs  viewer_core.rs  viewer_state.rs
src/feature/: mod.rs
src/feature/screenshot/: canvas.rs  capture.rs  color_picker.rs  draw.rs  help_box.rs  magnifier.rs  mod.rs  state.rs  toolbar.rs
src/feature/screenshot/canvas/: drag.rs  draw.rs  hit_test.rs  interaction.rs  mod.rs  mosaic.rs  render.rs  shape.rs  text_input.rs
src/feature/screenshot/canvas/interaction/: drag.rs  hover.rs  mod.rs
src/feature/screenshot/capture/: actions.rs  capture_impl.rs  mod.rs
src/feature/screenshot/ocr/: engine.rs  mod.rs  ocr_panel.rs  state.rs
src/feature/viewer/: arrows.rs  grid_view.rs  mod.rs  preview.rs  properties_panel.rs  single_view.rs  viewer_state.rs
src/feature/viewer/panels/: properties_panel.rs
src/feature/viewer/view/: grid_view.rs  mod.rs  single_view.rs
src/i18n/: lang.rs
src/mcp/: capture.rs  mod.rs
src/model/: config.rs  device.rs  image_meta.rs  mod.rs  mode.rs  state.rs  window_state.rs
src/os/: mod.rs  window.rs
src/os/linux/: mod.rs
src/os/macos/: mod.rs
src/os/windows/: mod.rs  ocr.rs  startup.rs
src/state/: mod.rs
src/test/: monitor.rs  monitor2.rs  monitor3.rs  screenshoot.rs  screenshoot2.rs
src/ui/: about.rs  arrows.rs  context_menu.rs  loading.rs  menu.rs  mod.rs  modal.rs  preview.rs  properties_panel.rs  resources.rs  right_click_menu.rs  settings.rs  toast.rs  ui_mode.rs  viewer.rs
src/ui/components/: about.rs  arrows.rs  color_picker.rs  context_menu.rs  crop.rs  grid_view.rs  icons.rs  loading.rs  magnifier.rs  menu.rs  mod.rs  mouse.rs  preview.rs  properties_panel.rs  screenshot.rs  screenshot_toolbar.rs  settings.rs  single_view.rs  status_bar.rs  ui_mode.rs
src/ui/menus/: context_menu.rs  menu.rs  mod.rs  status_bar.rs
src/ui/panels/: about.rs  mod.rs  properties_panel.rs  settings.rs
src/ui/screenshot/: capture.rs  capture2.rs  draw.rs  magnifier.rs  mod.rs  state.rs  toolbar.rs
src/ui/view/: arrows.rs  mod.rs  preview.rs  single_view.rs
src/ui/widgets/: about.rs  context_menu.rs  icons.rs  input.rs  loading.rs  menu.rs  mod.rs  modal.rs  settings.rs  toast.rs  toggle.rs  tray.rs
src/utils/: clipboard.rs  image.rs  log.rs  mod.rs  screen.rs  screenshot.rs  win_thumbnail.rs
