[package]
name = "CloverViewer"
version = "0.0.5"
edition = "2024"

[package.metadata.packager]
before-packaging-command = "cargo build --release"
identifier = "com.smallclover.cloverViewer"
icons = ["assets/images/clover_viewer.ico"]

# 将 lib 里的 dll 映射到安装后的根目录
resources = [
    { src = "lib/dav1d.dll", target = "dav1d.dll" }
]

[[package.metadata.packager.binaries]]
path = "CloverViewer.exe"
main = true

[build-dependencies]
winres = "0.1"


[dependencies]
# LRU 缓存，用于限制内存中的图片数量
lru = "0.16.3"
eframe = "0.33.3"
rfd = "0.17.2"
image = { version = "0.25.9", features = [
    "png", "jpeg", "gif", "bmp", "webp", "tiff",
    # 必须是avif-native
    "avif-native" # 为了加载avif格式，必须引入，另外为了通过编译还必须安装pkcg和dav1d
],  default-features = false}

egui = "0.33.3"
kamadak-exif = "0.6.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
arboard = "3.6.1"
single-instance = "0.3.3"
xcap = { version = "0.8.1"}

tracing = { version = "0.1.44", optional = true }
tracing-subscriber = { version = "0.3.22", features = ["fmt"], optional = true }
bytemuck = "1.25.0"
num_cpus = "1.17.0"
zune-jpeg = "0.5.12"
global-hotkey = "0.7.0"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
dev-logs = ["tracing", "tracing-subscriber"]