[package]
name = "CloverViewer"
version = "0.0.21"
edition = "2024"
description = "A lightweight image viewer and screenshot tool for Windows, written in Rust."
keywords = ["screenshot", "image-viewer", "screen-capture", "screenshot-tool", "image-browser"]
#cargo packager --release打包安装文件
[package.metadata.packager]
before-packaging-command = "cargo build --release"
identifier = "com.smallclover.cloverViewer"
icons = ["assets/images/clover_viewer.ico"]

## 将 lib 里的 dll 映射到安装后的根目录
#resources = [
#    { src = "lib/dav1d.dll", target = "dav1d.dll" }
#]

[[package.metadata.packager.binaries]]
path = "CloverViewer.exe"
main = true

[build-dependencies]
winres = "0.1"


[dependencies]
# LRU 缓存，用于限制内存中的图片数量
lru = "0.18.0"
eframe = "0.34.3"
rfd = "0.17.2"
image = { version = "0.25.9", features = [
    "png", "jpeg", "gif", "bmp", "webp", "tiff",
    # 必须是avif-native
    #"avif-native" # 为了加载avif格式，必须引入，另外为了通过编译还必须安装pkcg和dav1d
],  default-features = false}

egui = "0.34.3"
kamadak-exif = "0.6.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
arboard = "3.6.1"
single-instance = "0.3.3"
xcap = { version = "0.9.4"}
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "env-filter"] }
bytemuck = "1.25.0"
zune-jpeg = "0.5.12"
global-hotkey = "0.8.0"
raw-window-handle = "0.6.2"
tiny-skia = "0.12.0"
tray-icon = "0.24.1"
imageproc = "0.27.0"
ab_glyph = "0.2.32"
pollster = "0.4.0"
dirs = "6.0"
sys-locale = "0.3.2"
rmcp = { version = "1.7", features = ["server", "transport-io", "transport-streamable-http-server"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net"] }
axum = "0.8"
[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_System_Com",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Media_Ocr",
    "Graphics_Imaging",
    "Globalization",
    "Foundation",
    "Security_Cryptography",
    "Storage_Streams",
] }
winreg = "0.56.0"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
